fix spacing on "lets continue" for multipe question.

--- a/app/styles/_questionPreview.scss
+++ b/app/styles/_questionPreview.scss
@@ -133,6 +133,9 @@ textarea#openQuestionTextarea.mobile.width {
         }
     }
 }
+.lets-continue {
+    margin-bottom: 10px;
+}
 
 .previewQuestion {
     .specific-explanation {
